--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ section.header {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    border-bottom: 0px solid linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,1));
 }
 
 .header-text {
